feat: categories
