# app/Models/Category.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Category extends Model
+{
+    protected $table = 'categories';
+
+    protected $fillable = [
+        'name',
+    ];
+
+    public function products()
+    {
+        return $this->hasMany(Product::class, 'category_id');
+    }
+}
