# routes/api.php
@@ -1,15 +1,20 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
-use App\Http\Middleware\JwtMiddleware;
+use App\Http\Controllers\Api\CategoryController;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('auth')->group(function () {
   Route::post('/login', [AuthController::class, 'login']);
 
-  Route::middleware(JwtMiddleware::class)->group(function () {
+  Route::middleware('jwtAuth')->group(function () {
     Route::get('/me', [AuthController::class, 'me']);
     Route::post('/refresh', [AuthController::class, 'refresh']);
     Route::post('/logout', [AuthController::class, 'logout']);
   });
+});
+
+Route::middleware('jwtAuth')->prefix('categories')->group(function () {
+  Route::get('/', [CategoryController::class, 'index']);
+  Route::post('/', [CategoryController::class, 'store']);
 });
